// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BombTile /> Matches the current snapshot 1`] = `
<styled.div
  exploding={false}
  moveSpeed={0}
/>
`;

exports[`<BombTile /> Matches the current snapshot when exploding 1`] = `
<styled.div
  exploding={true}
  moveSpeed={0}
/>
`;
